<resources>
    <string name="app_name">tudas</string>
    <string name="challenges">Challenges</string>
    <string name="rankings">Rankings</string>
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="home">Home</string>
    <string name="jonathan">Jonathan</string>
    <string name="points">Points</string>
    <string name="friends">Friends</string>
    <string name="no_account_yet_register_now">No account yet? Register now</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="signing_in">Signing in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Challenges Fragments -->
    <string name="fragment_challeneges_sent_name">Challeneges Sent</string>
    <string name="fragment_challeneges_received_name">Challenges Received</string>
    <string name="fragment_challeneges_public_name">Challenges Public</string>


    <string name="button_to_attach_file">Button to attach file</string>
    <string name="challenge_time_left">Time Left</string>
    <string name="give_up">Give up</string>
    <string name="button_to_open_camera">Button to open Camera</string>
    <string name="button_to_share_the_challenge">Button to share the challenge</string>
    <string name="completed">Completed</string>
    <string name="add_proof">Add Proof</string>
    <string name="back">Back</string>
    <string name="challenge_title">Title</string>
    <string name="challenge_name">Name</string>
    <string name="challenge_description">Description</string>
    <string name="challenge_duration">Duration</string>
    <string name="challenge_difficulty">Difficulty</string>
    <string name="challenge_location">Location</string>
    <string name="challenge_reward">Reward</string>
    <string name="from">From</string>
    <string name="profile_picture">profile_picture</string>
    <string name="points_value">200</string>
    <string name="coin_value">1000</string>
    <string name="challenge_received_button_text">OPEN</string>
    <string name="challenge_sent_button_text">New Challenge</string>
    <string name="challenges_sent">Challenges Sent</string>
    <string name="create">Create</string>
    <string name="challenge_received">Challenge Received</string>
    <string name="public_challenges">Public Challenges</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="_12">12</string>
    <string name="open">Open</string>
    <string name="_1">1</string>
    <string name="felix">Felix</string>
    <string name="_200">200</string>
    <string name="challenge">Challenge</string>
    <string name="leave_group">Leave Group</string>
    <string name="receiver">Receiver</string>
    <string name="groups">Groups</string>
    <string name="send_to_all">Public</string>
</resources>