<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/feedFragment"
        android:title="@string/feed"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/challengesFragment"
        android:title="@string/challenges"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/rankingsFragment"
        android:title="@string/rankings"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_home_24"/>
</menu>