<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_challenge_received"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/info_box_margin"
        android:layout_marginTop="@dimen/info_box_margin"
        android:layout_marginRight="@dimen/info_box_margin"
        android:layout_marginBottom="80dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="@dimen/card_radius"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/info_box_margin_2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/back_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/font_size_medium"
                    app:drawableLeftCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/challenge_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/challenge_title"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/font_size_large" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/from"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/font_size_medium" />

                    <TextView
                        android:id="@+id/challenge_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                   android:padding="@dimen/info_box_text_padding"
                        android:textColor="@color/font_color_light"
                        android:background="@drawable/edit_text_box_rounded_corners_green"
                        tools:cornerRadius="@dimen/button_radius"
                        android:ems="10"
                        android:text="@string/challenge_name" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/info_box_margin"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/profile_picture" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/info_box_text_margin"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge_description"
                android:textColor="@color/secondary"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/info_box_text_padding"
                android:textColor="@color/font_color_light"
                android:background="@drawable/edit_text_box_rounded_corners_green"
                tools:cornerRadius="@dimen/button_radius"
                android:ems="10"
                android:text="@string/challenge_name" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/info_box_text_margin"

                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:text="@string/challenge_reward"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/font_size_medium" />

                    <TextView
                        android:id="@+id/challenge_reward"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/info_box_text_margin"
                        android:padding="@dimen/info_box_text_padding"
                        android:textColor="@color/font_color_light"
                        android:background="@drawable/edit_text_box_rounded_corners_green"
                        tools:cornerRadius="@dimen/button_radius"
                        android:ems="10"
                        android:text="@string/challenge_reward" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:text="@string/challenge_difficulty"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/font_size_medium" />

                    <TextView
                        android:id="@+id/challenge_difficulty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       android:padding="@dimen/info_box_text_padding"
                        android:textColor="@color/font_color_light"
                        android:background="@drawable/edit_text_box_rounded_corners_green"
                        tools:cornerRadius="@dimen/button_radius"
                        android:ems="10"
                        android:text="@string/challenge_difficulty" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/info_box_text_margin"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/challenge_time_left"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/font_size_medium" />

                    <TextView
                        android:id="@+id/challenge_time_left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/info_box_text_margin"
                        android:padding="@dimen/info_box_text_padding"
                        android:textColor="@color/font_color_light"
                        android:background="@drawable/edit_text_box_rounded_corners_green"
                        tools:cornerRadius="@dimen/button_radius"
                        android:text="@string/challenge_duration" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:text="@string/challenge_location"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/font_size_medium" />

                    <TextView
                        android:id="@+id/challenge_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/info_box_text_padding"
                        android:textColor="@color/font_color_light"
                        android:background="@drawable/edit_text_box_rounded_corners_green"
                        tools:cornerRadius="@dimen/button_radius"
                        android:ems="10"
                        android:text="@string/challenge_location" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/info_box_text_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/info_box_text_margin"
                    android:text="@string/add_proof"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/font_size_medium" />
                <ImageView
                    android:id="@+id/add_file"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="@dimen/circle_button_padding"
                    android:layout_marginEnd="@dimen/info_box_text_margin"
                    android:src="@drawable/ic_baseline_attach_file_24"
                    android:clickable="true"
                    android:background="@drawable/button_circle"
                    app:cornerRadius="@dimen/button_radius"
                    android:contentDescription="@string/button_to_attach_file" />

                <ImageView
                    android:id="@+id/open_camera"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="@dimen/circle_button_padding"
                    android:background="@drawable/button_circle"
                    android:layout_marginEnd="@dimen/info_box_text_margin"
                    android:src="@drawable/ic_baseline_photo_camera_24"
                    app:cornerRadius="@dimen/button_radius"
                    android:clickable="true"
                    android:contentDescription="@string/button_to_open_camera" />
                <ImageView
                    android:id="@+id/send_to_someone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="@dimen/circle_button_padding"
                    android:src="@drawable/ic_baseline_share_24"
                    android:background="@drawable/button_circle"
                    app:cornerRadius="@dimen/button_radius"
                    android:clickable="true"
                    android:contentDescription="@string/button_to_share_the_challenge"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/info_box_text_margin"
                android:orientation="horizontal"
                >


                <Button
                    android:id="@+id/completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cornerRadius="@dimen/button_radius"
                    android:layout_marginEnd="@dimen/info_box_text_margin"
                    android:text="@string/completed" />

                <Button
                    android:id="@+id/give_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/give_up"
                    app:cornerRadius="@dimen/button_radius"
                    android:backgroundTint="@color/red"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>