<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_challenge_received"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:clickable="false"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="@color/green"
    card_view:cardCornerRadius="@dimen/card_radius"
    card_view:contentPadding="10dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/challenge_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="28dp"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/font_size_medium"
                    android:text="@string/challenge_title" />

                <TextView
                    android:id="@+id/challenge_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/secondary"
                    android:text="@string/challenge_name" />
            </LinearLayout>

            <TextView
                android:id="@+id/challenge_time_left"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:gravity="end|center_vertical"
                android:textColor="@color/secondary"
                android:text="@string/challenge_duration" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/challenge_description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:gravity="top"
                android:textColor="@color/secondary"
                android:text="@string/challenge_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/challenge_button"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/info_box_text_margin"
                android:text="@string/challenge_received_button_text"
                app:cornerRadius="@dimen/button_radius" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/challenge_reward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="center_vertical"
                android:textColor="@color/secondary"
                android:drawablePadding="@dimen/icon_padding"
                android:paddingEnd="@dimen/icon_padding"
                android:text="@string/points_value"
                app:drawableEndCompat="@drawable/ic_gift" />

            <TextView
                android:id="@+id/challenge_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="center_vertical"
                android:textColor="@color/secondary"
                android:drawablePadding="@dimen/icon_padding"
                android:text="@string/points_value"
                app:drawableEndCompat="@drawable/ic_ruby" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
